@@ -1,3 +1,5 @@
+* Add drag & drop support on binary widget
+
 Version 5.0.0 - 2018-10-01
 * Bug fixes (see mercurial logs for details)
 * Use dropdown for attachment
